<resources>
    <!--    Commons strings-->
    <string name="app_name">SpaceX Tracker</string>
    <string name="settings">Settings</string>
    <string name="all">All Launches</string>
    <string name="next_launch">Closest launch</string>
    <string name="roadster">Roadster</string>
    <string name="loading">Loading</string>

    <!--    Launch details strings-->
    <string name="launch_date">Launch date:</string>
    <string name="mission_details">Mission details</string>
    <string name="payload_details">Payload details</string>
    <string name="links">Links</string>
    <string name="webcast">Webcast</string>
    <string name="wikipedia" translatable="false">Wikipedia</string>
    <string name="youtube" translatable="false">Youtube</string>
    <string name="reddit" translatable="false">Reddit</string>
    <string name="article">Article</string>

    <!--    Payload details-->
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="manufacturers">Manufacturers</string>
    <string name="customers">Customers</string>
    <string name="mass">Mass</string>

    <!--    Units-->
    <string name="kg">Kg</string>
    <string name="lbs">Lbs</string>
    <string name="mi">Mi</string>
    <string name="km">Km</string>

    <!--    Roadster strings-->
    <string name="mars_distance">Mars distance</string>
    <string name="earth_distance">Earth distance</string>

    <!--    Settings-->
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="units">Units</string>
    <string name="unit_system">Unit system</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="default_theme">System default</string>

    <!--    Misc-->
    <string name="no_info">No info</string>

    <!--    preferences(non translatable)-->
    <string name="unit_system_preferences_key" translatable="false">UNIT_SYSTEM</string>
    <string name="theme_preferences_key" translatable="false">THEME_PREFERENCES</string>
    <string name="theme_preferences_value" translatable="false">MODE_NIGHT_NO</string>
    <string name="dark_theme_preference_value" translatable="false">MODE_NIGHT_YES</string>
    <string name="light_theme_preference_value" translatable="false">MODE_NIGHT_NO</string>
    <string name="system_theme_preference_value" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>
</resources>