<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_of_element"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        >

        <TextView
            android:id="@+id/textView_payload_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="40dp"
            android:text="@string/name"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_payload_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/type"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_payload_name" />

        <TextView
            android:id="@+id/textView_payload_manufacturers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/manufacturers"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_payload_type" />

        <TextView
            android:id="@+id/textView_payload_customers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/customers"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_payload_manufacturers" />

        <TextView
            android:id="@+id/textView_payload_mass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/mass"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_payload_customers" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>