<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        tools:context=".ui.launches.next.NextLaunchFragment">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="progressBar_loading, textView_loading"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/loading"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Caption'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_loading"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/contentGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="textView_mission_details,
                textView_mission_details_text,
                textView_payload_name,
                recyclerView_payload,
                textView_launch_links_header,
                gridLayout_link_buttons"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView_mission_badge"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="Mission Badge"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            tools:src="@drawable/ic_default_spacex_badge" />

        <TextView
            android:id="@+id/textView_mission_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLength="20"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_mission_badge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView_mission_badge"
            app:layout_constraintVertical_bias="0.0"
            tools:text="SpaceX Mission" />

        <TextView
            android:id="@+id/textView_mission_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/back_of_element"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/mission_details"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_mission_badge" />

        <TextView
            android:id="@+id/textView_mission_details_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/back_of_element"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_mission_details" />

        <TextView
            android:id="@+id/textView_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.986"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_mission_name"
            tools:text="Launch date" />

        <TextView
            android:id="@+id/textView_payload_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/back_of_element"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/payload_details"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_mission_details_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_payload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorBackground"
            android:overScrollMode="never"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:rotation="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_payload_name"
            tools:itemCount="2"
            tools:listitem="@layout/payload_details_item" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_launch_links"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:constraint_referenced_ids="textView_launch_links_header, gridLayout_link_buttons"
            />

        <TextView
            android:id="@+id/textView_launch_links_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/back_of_element"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/links"
            android:textAppearance='@style/TextAppearance.MaterialComponents.Body1'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_payload" />

        <LinearLayout
            android:id="@+id/gridLayout_link_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView_launch_links_header">

            <Button
                android:id="@+id/button_launch_links_webcast"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/back_of_element"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/webcast"
                android:textAppearance='@style/TextAppearance.MaterialComponents.Body1' />

            <Button
                android:id="@+id/button_launch_links_wiki"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/back_of_element"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/wikipedia"
                android:textAppearance='@style/TextAppearance.MaterialComponents.Body1' />

            <Button
                android:id="@+id/button_launch_links_youtube"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/back_of_element"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/youtube"
                android:textAppearance='@style/TextAppearance.MaterialComponents.Body1' />

            <Button
                android:id="@+id/button_launch_links_reddit"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/back_of_element"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/reddit"
                android:textAppearance='@style/TextAppearance.MaterialComponents.Body1' />

            <Button
                android:id="@+id/button_launch_links_article"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/back_of_element"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/article"
                android:textAppearance='@style/TextAppearance.MaterialComponents.Body1' />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>